# embedding-julia

./: .gitignore  README.md
.github/workflows/: CI.yml
complicatedexamples/: CMakeLists.txt  README.md  main.cpp  run.sh
hello/: CMakeLists.txt  README.md  hello.cpp
hello_cxx/: CMakeLists.txt  README.md
hello_gcc/: run.sh
hello_gcc_cmake/: CMakeLists.txt  README.md
hello_world/: README.md  main.c  run.sh
